--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '6.3.3'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.3'
+
     //Hibernate Validator
     implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
     implementation 'javax.validation:validation-api:2.0.1.Final'
