--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=232323
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+user.service.url=http://localhost:8085/api/users
+notification.service.url=http://localhost:8086/api/notifications
